# webbean

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README  bank.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml  pythonpublish.yml  pythonrelease.yml
core/: Transaction.py
modules/: Account.py  beancount.py  weboob.py
resources/template/: beancount.jinja
tests/: conftest.py  factories.py
tests/beancount/: test_sync.py
tests/resources/beancount/: accounts.beancount  no_transaction_on_ccp.beancount  sample.beancount
tests/weboob/: conftest.py  test_sync.py
webbean/: __main__.py  bank.py  transaction.py
webbean/core/: Transaction.py  account.py  transaction.py
webbean/modules/: Account.py  MODULES.py  __init__.py  account.py  beancount.py  weboob.py
webbean/resources/template/: beancount.jinja
