[tool.poetry]
name = "webbean"
version = "0.0.1"
description = "An application to get transactions diff between accounting file and bank"
authors = ["Romain Pesche <romain@pesche.fr>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.dependencies]
python = "^3.11"
beancount = "^2.3.6"
woob = "^3.6"
jinja2 = "^3.1.2"
ruff = "^0.1.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.4"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_variable = [
    "webbean/__init__.py:__version__"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",      # Missing docstring
    "ANN",     # Missing annotation
    "TD",      # Todo
    "FIX002",  # Todo
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "ISC001",  # single-line-implicit-string-concatenation
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts 
    "PLR2004", # Magic value
]
